# ePrinty

./: ABOUT_DIALOG_PRODUCTS_DIFF.md  BUILD_MACOS.md  CONSOLE_WINDOW.md  DEPLOYMENT.md  FIX_ICONS.md  FIX_MEMORY.md  FIX_RICOH_HANG.md  FIX_WIX_BUNDLE.md  INSTALL.md  MACOS_ADAPTER.md  PRNPORT_USAGE.md  PROJECT_STRUCTURE.md  Purge-Printers.ps1  QUICK_START.md  README.md  REGRESSION_TEST_CHECKLIST.md  RUST_INSTALL.md  TROUBLESHOOTING.md  VERSION_CONFIG_README.md  build-with-vs-env.ps1  check-webview2.ps1  create_placeholder_icons.ps1  dev-as-admin.cmd  dev-as-admin.ps1  fix_rust_path.ps1  index.html  package-lock.json  package.json  printer_config.json  refresh_env.ps1  restore_env.ps1  run_local_server.md  setup-env.cmd  setup-env.ps1  test_config.json  version_config.json  vite.config.js  打印测试页技术方案盘点.md  打印测试页日志增强说明.md  日志清理总结.md  (+2 more)
.cargo/: config.toml
docs/: REFACTOR_ZIP_EXTRACTION_COMPLETION.md  backend-refactor-phase-b.md  config-load-and-printer-detect-flow.md  config-refactor-summary.md  delete-printer-cleanup-levels.md  delete-printer-implementation.md  eprinty-architecture-review.md  fix-delete-printer-access-denied.md  macos-phase-a-implementation.md  macos-phase-b-implementation.md  refactor-completion-summary.md  system-info-feature.md
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  app.manifest  build.rs  embed_manifest.ps1  install_printer_old.txt  tauri.conf.json  tauri.macos.conf.json  temp_main_old.rs
src-tauri/icons/: .gitkeep  README.md  icon.icns
src-tauri/scripts/: README.md  ricoh320.pdd
src-tauri/src/: exec.rs  install_event_emitter.rs  main.rs
src-tauri/src/commands/: config_cmd.rs  mod.rs  printer_cmd.rs
src-tauri/src/platform/: macos.rs  mod.rs  test_page_content.rs
src-tauri/src/platform/macos/: cups_ffi.rs  delete.rs  install.rs  ipp_printers.rs  test_page.rs
src-tauri/src/platform/windows/: archive.rs  cmd.rs  delete.rs  driver_bootstrap.rs  driver_fetch.rs  driver_store_setupapi.rs  encoding.rs  enum_printers.rs  install.rs  list.rs  log.rs  mod.rs  open.rs  powershell_install.rs  printer_exists.rs  ps.rs  remove.rs  step_reporter.rs  test_page.rs
src-tauri/src/services/: config_service.rs  events.rs  fs_paths.rs  mod.rs  printer_service.rs
src-tauri/src/utils/: mod.rs  zip_extract.rs
src-tauri/tests/: zip_extraction_tests.rs
src/components/: AppTitleBar.vue  PrinterArea.vue  PrinterItem.vue
src/domain/progress/: schema.ts
src/models/: installProgress.ts
src/services/: configService.ts  installProgressListener.ts  installService.ts  printerDetectService.ts  printerMatch.ts
src/settings/: appSettings.ts
src/stores/: installProgress.ts  printerRuntimeStore.ts  systemInfo.ts
src/ui/modals/: DeletePrinterModal.vue
src/utils/: progress.ts
